--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Cloudinary cloud setup
 # Note: variables must start with VITE_ to be accessible to the program.
-VITE_CLOUDINARY_CLOUD_NAME='dzy111gp8'
+# Please fill in the value below with your cloud name
+VITE_CLOUDINARY_CLOUD_NAME=''
 VITE_CLOUDINARY_CLOUD_UPLOAD='jg1p01dh'
